<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.chy</groupId>
    <artifactId>lamia</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <encoding>utf-8</encoding>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=lamia</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=lamia</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=lamia</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=lamia</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=lamia</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=lamia</arg>
                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.comp=lamia</arg>
                        <arg>--add-exports=java.base/jdk.internal.org.objectweb.asm=lamia</arg>
                        <arg>--add-exports=java.base/jdk.internal.org.objectweb.asm.signature=lamia</arg>

                    </compilerArgs>
                </configuration>
            </plugin>



            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>process-META</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/classes</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/src/main/resources/</directory>
                                    <includes>
                                        <include>**/*</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>META-INF/**/*</exclude>
                </excludes>
            </resource>
        </resources>
    </build>

    <dependencies>


    </dependencies>


</project>